--- a/src/translations/en.json
+++ b/src/translations/en.json
@@ -35,8 +35,8 @@
       "handbook": "Handbook",
       "manage-handbook": "Manage handbook"
     },
-    "doctor":{
-      "manage-schedule" : "Manage Doctor's schedule"
+    "doctor": {
+      "manage-schedule": "Manage Doctor's schedule"
     }
   },
   "manage-user": {
@@ -55,7 +55,13 @@
     "edit": "Edit user"
   },
   "homepage": {
-  "outstanding-doctor": "Last week's featured doctor",
-  "more-infor": "More Infor"
+    "outstanding-doctor": "Last week's featured doctor",
+    "more-infor": "More Infor"
+  },
+  "manage-schedule": {
+    "title": "Manage doctor's examination plan",
+    "choose-doctor": "Choose doctor",
+    "choose-date": "Choose date",
+    "save":"Save infor"
   }
 }
