--- a/src/translations/vi.json
+++ b/src/translations/vi.json
@@ -35,8 +35,8 @@
       "handbook": "Cẩm nang",
       "manage-handbook": "Quản lý cẩm nang"
     },
-    "doctor":{
-      "manage-schedule" : "Quản lý kế hoạch khám bệnh"
+    "doctor": {
+      "manage-schedule": "Quản lý kế hoạch khám bệnh"
     }
   },
   "manage-user": {
@@ -57,5 +57,11 @@
   "homepage": {
     "outstanding-doctor": "Bác sĩ nổi bật tuần qua",
     "more-infor": "Xem thêm"
+  },
+  "manage-schedule": {
+    "title": "Quản lý kế hoạch khám bệnh của bác sĩ",
+    "choose-doctor": "Chọn bác sĩ",
+    "choose-date": "Chọn ngày",
+    "save":"Lưu thông tin"
   }
 }
